# startup202604

./: .gitignore  README.md
china-solar-downstream/: notion-text.json
china-solar-downstream/.playwright-mcp/: page-2026-05-08T15-15-27-118Z.yml  page-2026-05-08T15-16-18-659Z.yml  page-2026-05-08T15-16-30-042Z.yml  page-2026-05-08T15-16-37-148Z.yml  page-2026-05-08T15-16-45-765Z.yml  page-2026-05-08T15-17-07-814Z.yml  page-2026-05-08T15-39-38-884Z.yml  page-2026-05-08T15-39-46-567Z.yml  page-2026-05-08T15-49-33-146Z.yml  page-2026-05-08T15-50-13-413Z.yml  page-2026-05-08T15-50-28-497Z.yml  page-2026-05-08T15-50-35-870Z.yml
data/: README.md
data/docs/: 20200097.ipynb  README.md
data/processed/: actual_pvout_region_annual.csv  actual_pvout_region_monthly.csv  processed_dataset_manifest.csv  (+6 more)
solar_mvp/: .env.example  .gitignore  README.md  dev_run.py  pyproject.toml
solar_mvp/output/: dashboard.html  filter_dropout_stats_gt.csv  haenam_solar_map_v2.html  ml_model.pkl  parcels_final.parquet  parcels_scored_rule.parquet  parcels_validated.parquet  score_comparison.html  top100_ensemble.geojson  top_pnu_list_rule.csv  validation_report.html
solar_mvp/solar_mvp/: __main__.py  config.py  data_requirements.py  kepco_grid.py  make_test_data.py  models.py  pipeline.py  serve.py  stage0_download.py  stage1_collect.py  stage2_geom.py  stage3_enrich.py  stage4_5_validate.py  stage4_6_ml_tune.py  stage4_score.py  stage5_viz.py  vworld_client.py
solar_mvp/src/: config.py
solar_mvp/tests/: test_no_leakage.py  test_scoring.py  test_vworld_client.py
solarfit/: .env.example
(+327 files in other folders)
