[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-mvp"
version = "0.1.0"
description = "Detect solar-suitable land parcels in Haenam-gun, South Korea"
requires-python = ">=3.11"
authors = [
    {name = "limthanh", email = "limtaeksg@gmail.com"}
]

dependencies = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "folium>=0.15",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "scipy>=1.12",
    "seaborn>=0.13",
    "pandas>=2.1",
    "numpy>=1.26",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "imbalanced-learn>=0.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "responses",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
